added footer links

--- a/getinvolved.css
+++ b/getinvolved.css
@@ -44,7 +44,7 @@ width: 100%;
 
 }
   body {
-   background-image: url("img/volunteer0.jpg");
+   background-image: url("img/kindbackground.jpg");
    background-position: center;
    background-size: cover;
    background-color: #000000;
