--- a/index.css
+++ b/index.css
@@ -163,48 +163,49 @@ color: transparent;
     
 .slide figure:nth-child(1) { 
     background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0), rgba(0, 0, 0, 1)),
-    url(img/image\ 1.jpeg);
+    url(img/image\ 1\ copy.jpeg);
     
 }
 
 .slide figure:nth-child(2) {
     background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.5), rgba(255, 255, 255, 0), rgba(0, 0, 0, 1)),
-    url(img/image\ 3.jpg);
+    url(img/image\ 2\ copy.jpeg);
     animation-delay: 7s; 
 }
 
 .slide figure:nth-child(3) { 
     background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0), rgba(0, 0, 0, 1)),
-    url(img/image\ 2.jpeg);
+    url(img/image\ 3\ copy.jpg);
     animation-delay: 12s;
 }
 
 .slide figure:nth-child(4) { 
     background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0), rgba(0, 0, 0, 1)),
-    url(img/image\ 4.png);
+    url(img/image\ 4\ copy.png);
     animation-delay: 18s;
 }
 
 .slide figure:nth-child(5) {
     background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0), rgba(0, 0, 0, 1)),
-    url(img/image\ 5.jpg);
-    animation-delay: 24s;}
+    url(img/image\ 5\ copy.jpg);
+    animation-delay: 24s;
+  }
 
     .slide figure:nth-child(6){
         background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0), rgba(0, 0, 0, 1)),
-    url(img/image\ 6.jpg);
+    url(img/image\ 6\ copy.jpg);
     animation-delay: 30s;
     }
 
     .slide figure:nth-child(7){
         background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0), rgba(0, 0, 0, 1)),
-    url(img/image\ 7.jpeg);
+    url(img/image\ 7\ copy.jpeg);
     animation-delay: 36s;
     }
 
     .slide figure:nth-child(8){
         background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0), rgba(0, 0, 0, 1)),
-    url(img/image\ 8.jpg);
+    url(img/image\ 8\ copy.jpg);
     animation-delay: 42s;
     }
 
