--- a/getinvolved.css
+++ b/getinvolved.css
@@ -44,11 +44,15 @@ width: 100%;
 
 }
   body {
-   background-image: url("img/kindbackground.jpg");
+   background-image: url("img/home4.jpg");
    background-position: center;
    background-size: cover;
    background-color: #000000;
-   /* background: linear-gradient(to bottom, rgb(255, 255, 255, 0), rgba(0, 0, 0, 1)); */
+  }
+
+  .gradient{
+    background: linear-gradient(to bottom, rgb(255, 255, 255, 0), rgba(0, 0, 0, 1));
+    z-index:-1;
   }
   
   .getinvolved {
