--- a/resources.css
+++ b/resources.css
@@ -6,6 +6,17 @@ body{
     margin: 0;
     padding: 0;
     position: relative;
+    display: flex;
+    flex-direction: column; 
+    min-height: 100vh;
+    background: gray;
+    max-width: 100vw;
+    max-height: auto;
+}
+.gradient{
+    background: linear-gradient(rgba(4,9,30,0.7),rgba(4,9,30,0.7));
+   /* z-index: -1;*/
+
 }
 /*NavBar*/
 
@@ -73,7 +84,7 @@ width: 100%;
     position: fixed;
     top: 0;
     left: 0;
-    background: linear-gradient(rgba(4,9,30,0.7),rgba(4,9,30,0.7))
+    background-image:  linear-gradient(to bottom, rgba(255, 255, 255, 0), rgba(0, 0, 0, 1)), url("img/home4.jpg");
   }
   /*Topinfo*/
 
@@ -165,19 +176,20 @@ width: 100%;
 
 /*Footer*/
 
-footer {
-float:right;
-width: 10%;
-position: absolute;
-bottom: 0%;
-right: 0%;
+footer
+{
+display: flex;
 padding: 2vw;
 padding-right: 2.5vw;
 padding-bottom: 6vh;
-/*display: flex;
-justify-content: flex-start;*/
+margin-top: auto;
 }
 
+aside
+{
+margin-left: auto;
+order: 2;
+}
 
 .social
 {
@@ -200,12 +212,11 @@ paint-order: stroke;
 }
 
 .foot {
-position: relative;
-left:7%;
-bottom: 7%;
+display: flex;
+align-items: center;
 color: whitesmoke;
 font-family:'Open sans' ;
-font-size: 1vw;
+font-size: 1.5vw;
 font-weight:330;
+position: absolute;
 }
-
