--- a/about.css
+++ b/about.css
@@ -15,6 +15,13 @@ nav {
 nav img {
   width: 150px;
 }
+
+.name {
+  color: black;
+  font-family: "Open Sans", sans-serif;
+  font-size: 20px;
+  padding: 2% 6%;
+}
 .nav-links {
   flex: 1;
   text-align: right;
