--- a/getinvolved.css
+++ b/getinvolved.css
@@ -4,11 +4,19 @@
   }
  
 
+  .name {
+    color: whitesmoke;
+    font-family: 'Open sans';
+    
+}
 nav{
   display: flex;
   padding: 2% 6%;
   justify-content: space-between;
   align-items: center;
+  position: relative;
+  z-index: 1;
+  color: whitesmoke;
   
 }
 nav img{
@@ -28,6 +36,7 @@ nav img{
   color: white;
   text-decoration: none;
   font-size: 20px;
+  font-family:'Open sans';
   
 }
 .nav-links ul li::after{
@@ -42,6 +51,7 @@ nav img{
 .nav-links ul li:hover::after{
 width: 100%;
 
+
 }
   body {
    background-image: url("img/home4.jpg");
@@ -50,6 +60,9 @@ width: 100%;
    background-color: #000000;
   }
 
+  a:hover{ 
+    background-color: #806d65;
+  }
 
   .gradient{
     background: linear-gradient(to bottom, rgb(255, 255, 255, 0), rgba(0, 0, 0, 1));
@@ -70,18 +83,15 @@ width: 100%;
   }
   
   .container {
-    margin:5px;
-    width: auto;
+    display: flex;
+    margin:5vw;
+    width: 480px;
+    height: 350px;
     padding: 0 20px 20px;
     position: relative;
     justify-content: center;
   }
 
-  /* img {
-    display: block;
-    width: 100%;
-    height: auto;
-  } */
   
   .overlay {
     position: absolute;
@@ -94,48 +104,60 @@ width: 100%;
     opacity: 0;
     transition: .5s ease;
     background-color: #A89E93;
+   
   }
-  
+
+
   .container:hover .overlay {
     opacity: 1;
   }
   
   a{
-      color:whitesmoke;
-      align: center;
-  }
+    color:whitesmoke;
+    text-decoration: none;
+}
+
+h4{
+    text-align:center;
+    font-size:  20pt;
+    font-family:'Open sans';
+    font-weight: bold;
+}
+    
   .text {
     color: whitesmoke;
     font-size: 20px;
-    position: absolute;
+    position: relative;
+    display: flex;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     -ms-transform: translate(-50%, -50%);
-    font-family:"Jazz LET";
+    font-family:'Open sans';
     text-align: justify;
+    margin: 2px;
+    padding-top:2vh;
+    padding-bottom:2vh;
+    padding-left: 5vh;
+    padding-right: 5vh;
+    justify-content: center;
+
   }
   
   
 footer{
-float:right;
-position: fixed;
-bottom: 0%;
-right: 0%;
+display: flex;
 padding: 2vw;
 padding-right: 2.5vw;
 padding-bottom: 6vh;
+margin-top: auto;
 }
 
-.footer1{
-  color: white;
-  padding: 3px;
-  margin: 3px;
-  text-align: left;
-  position:relative;
-  font-family:"Marker Felt";
+aside
+{
+margin-left: auto;
+order: 2;
 }
- 
 
 .social
 {
@@ -159,11 +181,10 @@ paint-order: stroke;
 
 p
 {
-position: fixed;
-left:7%;
-bottom: 7%;
+display: flex;
+align-items: center;
 color: whitesmoke;
 font-family:'Open sans' ;
-font-size: 1vw;
+font-size: 1.5vw;
 font-weight:330;
 }
