--- a/getinvolved.css
+++ b/getinvolved.css
@@ -60,9 +60,9 @@ width: 100%;
    background-color: #000000;
   }
 
-  /* a:hover{ 
+  .forms:hover{ 
     background-color: #806d65;
-  } */
+  }
 
   .gradient{
     background: linear-gradient(to bottom, rgb(255, 255, 255, 0), rgba(0, 0, 0, 1));
