--- a/getinvolved.css
+++ b/getinvolved.css
@@ -84,12 +84,11 @@ width: 100%;
   
   .container {
     display: flex;
-    margin:5vw;
-    width: 480px;
-    height: 350px;
     padding: 0 20px 20px;
     position: relative;
     justify-content: center;
+    margin:5px;
+    width: auto;
   }
 
   
