changed font style for nav in index and margin ttop for get involved

--- a/index.css
+++ b/index.css
@@ -52,7 +52,7 @@ nav{
     color: white;
     text-decoration: none;
     font-size: 1.67vw;
-    
+    font-family:'Open sans';
   }
   .nav-links ul li::after{
     content: '';
