added footer to contact

--- a/contact.css
+++ b/contact.css
@@ -140,4 +140,49 @@
     color: white
   }
   
+  /*Footer*/
+
+  footer
+  {
+  display: flex;
+  padding: 2vw;
+  padding-right: 2.5vw;
+  padding-bottom: 6vh;
+  margin-top: auto;
+  }
   
+  aside
+  {
+  margin-left: auto;
+  order: 2;
+  }
+  
+  .social
+  {
+  color: whitesmoke;
+  padding: 1.5vw;
+  text-decoration: none;
+  font-size: 2vw;
+  }
+  
+  .social:hover
+  {
+  opacity: 0.5;
+  }
+  
+  i.fa-circle-thin
+  {
+  -webkit-text-stroke-color: black;
+  -webkit-text-stroke-width:2px;
+  paint-order: stroke;
+  }
+  
+  .foot {
+  display: flex;
+  align-items: center;
+  color: whitesmoke;
+  font-family:'Open sans';
+  font-size: 1.5vw;
+  font-weight:330;
+  position: absolute;
+  }
