fixed word size

--- a/resources.css
+++ b/resources.css
@@ -180,7 +180,7 @@ width: 100%;
   left: 50%;
   transform: translate(-50%, -50%);
   -ms-transform: translate(-50%, -50%);
-  font-family:"Jazz LET";
+  font-family: 'Open Sans', sans-serif;
   text-align: justify;
 }
 .desc h3{
@@ -189,7 +189,7 @@ width: 100%;
 
 p{
  line-height: 1.2;
- font-size: 1vw;
+ font-size:17px;
  padding: 20px;
 }
 
